...
        tableView.delegate = self
        tableView.register(UITableViewCell.self, forCellReuseIdentifier: "cell")
        
    }

    @IBAction func addButton(_ sender: Any) {
        let alertDialog = UIAlertController(title: "Add To Do", message: "Enter a To Do Item", preferredStyle: .alert)
        alertDialog.addTextField{ textField in
        
            textField.placeholder = "Enter something"
            
        }
        
        let okeyButton = UIAlertAction(title: "Okey ", style: .default) { action  in
            
            guard let textField = alertDialog.textFields?[0], let inputText = textField.text, !inputText.isEmpty  else { return }
...
