...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sMf-om-XFD" secondAttribute="bottom" id="4aw-A1-ron"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sMf-om-XFD" secondAttribute="trailing" id="5hB-qP-4N2"/>
                            <constraint firstItem="sMf-om-XFD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="wle-6Y-oME"/>
                            <constraint firstItem="sMf-om-XFD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xkY-5g-qQi"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Title" id="QIh-fr-cwn">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="plus" catalog="system" id="sG2-JU-vkE">
                            <connections>
                                <action selector="addButton:" destination="BYZ-38-t0r" id="DAf-o7-rQM"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
